@@ -2,10 +2,6 @@ This is not an exhaustive list of TODO items.
 
 * Write a bunch of tests for the exception API
 
-* Remove :lexical tests in t/* and convert them to using
-  autodie.  The :lexical option is no longer officially supported in
-  Fatal.  These tests may be allowable in an t/internal.t file.
-
 * (More?) tests for user defined subs!
 
 * Define roles properly.
