@@ -3,7 +3,7 @@ use strict;
 
 use constant NO_SUCH_FILE => "this_file_or_dir_had_better_not_exist_XYZZY";
 
-use Test::More tests => 23;
+use Test::More tests => 17;
 
 use Fatal qw(open close :void opendir);
 
@@ -34,32 +34,3 @@ like(
 	$@, qr{Cannot make the non-overridable builtin print fatal},
 	"Can't override print"
 );
-
-# Lexical Tests
-# TODO - These are all testing non-public interfaces.  Ideally they
-# should be switched over to using autodie instead.
-
-eval { Fatal->import(qw(:lexical :void)) };
-like($@, qr{cannot be used with lexical}, ":void can't be used with :lexical");
-
-eval { Fatal->import(qw(open close :lexical)) };
-like($@, qr{:lexical must be used as first}, ":lexical must come first");
-
-{
-	use Fatal qw(:lexical chdir);
-
-	eval { chdir(NO_SUCH_FILE); };
-	like ($@, qr/^Can't chdir/, "Lexical fatal chdir");
-
-	no Fatal qw(:lexical chdir);
-
-	eval { chdir(NO_SUCH_FILE); };
-	is ($@, "", "No lexical fatal chdir");
-
-}
-
-eval { chdir(NO_SUCH_FILE); };
-is($@, "", "Lexical chdir becomes non-fatal out of scope.");
-
-eval { Fatal->import('2+2'); };
-like($@,qr{Bad subroutine name},"Can't use fatal with invalid sub names");
