@@ -27,6 +27,9 @@ Revision history for Fatal
           'use autodie qw(:default)'.  This excludes system(),
           which depends upon an optional module.
 
+        * TEST: Internal tests moved from Fatal.t to
+          internal.t
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
